# platypus

./: .gitignore  AUTHORS  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  TODO.md  deny.toml  justfile  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
LICENSES/: LicenseRef-Trademark.txt
apps/PlatypusMac/: Info.plist  Package.swift  README.md  justfile
apps/PlatypusMac/Sources/CPlatypusFFI/: shim.c
apps/PlatypusMac/Sources/CPlatypusFFI/include/: module.modulemap
apps/PlatypusMac/Sources/PlatypusMac/App/: ContentView.swift  LCDFonts.swift  PlatypusApp.swift  QuitGuard.swift  RadioModel.swift  Theme.swift  main.swift
apps/PlatypusMac/Sources/PlatypusMac/Bridge/: BrowseSource.swift  Display.swift  FFI.swift  Ft60.swift  Ft60Options.swift  Keychain.swift  Library.swift  PlatypusCore.swift  RadioCapability.swift  RadioReference.swift  Radios.swift  Write.swift
apps/PlatypusMac/Sources/PlatypusMac/Card/: Backup.swift  BackupStore.swift  CardDetect.swift  CardLists.swift  Eject.swift
apps/PlatypusMac/Sources/PlatypusMac/Catalog/: BrowseSources.swift  CatalogView.swift  DataSources.swift  DisplayEditorSupport.swift  DisplayLCD.swift  DisplayLCDLayout.swift  DisplaySettingsSheet.swift  ManageRadiosSheet.swift  MapView.swift  ProgrammingRules.swift  RadioActionBar.swift  RadioCardView.swift  ServiceType.swift
apps/PlatypusMac/Sources/PlatypusMac/FT60/: FT60EditorView.swift  FT60Memory.swift  FT60ReadSheet.swift  FT60WriteSheet.swift
apps/PlatypusMac/Tests/PlatypusMacTests/: AppStateTests.swift  CatalogLogicTests.swift  FT60Tests.swift
crates/platypus-core/: Cargo.toml
crates/platypus-core/examples/: bench_fullusa.rs  card_write.rs  ft60_decode.rs
crates/platypus-core/src/: card.rs  county_geo.rs  display.rs  error.rs  extract.rs  favorites.rs  lib.rs  model.rs  provider.rs  rr.rs  serial.rs  synthesize.rs
crates/platypus-core/src/device/: ft60.rs  mod.rs  profile.rs  sds150.rs
crates/platypus-core/src/format/: mod.rs  sentence.rs
crates/platypus-core/tests/: extract.rs  ft60_roundtrip.rs  locate.rs  provider.rs  roundtrip.rs  writer.rs
crates/platypus-ffi/: Cargo.toml  cbindgen.toml
crates/platypus-ffi/examples/: rr_smoke.rs
crates/platypus-ffi/include/: platypus.h
crates/platypus-ffi/src/: lib.rs  rr.rs
crates/platypus-rr/: Cargo.toml
crates/platypus-rr/examples/: dump.rs  fetch_area.rs
crates/platypus-rr/src/: lib.rs  parse.rs
crates/platypus-rr/tests/: parse.rs
crates/platypus-rr/tests/fixtures/: counties.xml  country_info.xml  country_list.xml  county_freqs_by_tag.xml  fcc_callsign.xml  fcc_service_code.xml  feed_broadcasts.xml  metros.xml  mode.xml  prox_callsigns.xml  search_freqs.xml  state.xml  states.xml  subcat_freqs.xml  talkgroups.xml  tg_cats.xml  trs_by_sysid.xml  trs_details.xml  trs_sites.xml  user_data.xml  zipcode.xml
crates/platypus-serial/: Cargo.toml
crates/platypus-serial/examples/: capture.rs  writeback.rs
crates/platypus-serial/src/: lib.rs
docs/: architecture.md  capabilities.md  respecting-sources.md  sources.md
docs/radios/: README.md  ft60.md  sds150-display.md  sds150.md
samples/: README.md
samples/synthetic/: README.md  f_example.hpd  f_list.cfg  generate.py  hpdb.cfg  profile.cfg  s_000090.hpd
tools/: inspect_hpd.py  roundtrip_hpd.py
