# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2026 The Platypus Authors
# Platypus workspace.
# `platypus-core` is the open, cross-platform backend (no UI, no platform assumptions).
# Future members (not yet present): a CLI, other front-ends, etc. — all built on core.
[workspace]
resolver = "2"
members = ["crates/platypus-core", "crates/platypus-ffi", "crates/platypus-serial", "crates/platypus-rr"]

# Shared package metadata, inherited by the crates via `.workspace = true`.
[workspace.package]
version = "0.2.0"
license = "GPL-2.0-only"
repository = "https://github.com/FuzzyGophers/platypus"
# Not published to crates.io (yet); guards against an accidental `cargo publish`.
publish = false

# Release builds UNWIND on panic so the FFI boundary can recover gracefully. Every
# `extern "C"` entry point wraps its body in `catch_unwind` (see `ffi_guard` in
# crates/platypus-ffi/src/lib.rs) and, on a panic, returns its error/empty fallback instead of
# crossing the C ABI. Under `panic = "abort"` that catch is a no-op (the process aborts before
# unwinding), so a panic would take down the whole Swift app; `unwind` lets the guard turn an
# unexpected panic into a surfaced UI error. A panic must still never *escape* an entry point —
# that's the guard's job, enforced by the panic-recovery test.
[profile.release]
panic = "unwind"
