# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2026 The Platypus Authors
[package]
name = "platypus-ffi"
version.workspace = true
edition = "2021"
description = "C ABI bridge over platypus-core, for the SwiftUI macOS app (and other non-Rust front-ends)."
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "platypus_ffi"
# staticlib: linked directly into the macOS app. cdylib: handy for quick loading/tests.
# rlib: lets Rust integration tests / examples (e.g. the RR smoke) link the crate.
crate-type = ["staticlib", "cdylib", "rlib"]

# Results cross the boundary as JSON strings, built by hand (no serde). Non-core deps:
# `platypus-serial` (our termios transport) drives the FT-60 clone read; `platypus-rr` with its
# `http` feature drives the RadioReference fetch over native OS TLS (Secure Transport on macOS).
# The core itself stays dependency-free.
[dependencies]
platypus-core = { path = "../platypus-core", version = "0.2.0" }
platypus-serial = { path = "../platypus-serial", version = "0.2.0" }
platypus-rr = { path = "../platypus-rr", version = "0.2.0", features = ["http"] }
