# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2026 The Platypus Authors
[package]
name = "platypus-serial"
version.workspace = true
edition = "2021"
description = "Serial clone-image transport (termios via nix) for Platypus — drives radios like the Yaesu FT-60 so the core stays dependency-free."
license.workspace = true
repository.workspace = true
publish.workspace = true

# The serial transport (I/O) sibling of the zero-dep core. Uses `nix` (a safe MIT termios
# wrapper over libc) so the core itself stays dependency-free. Unix/macOS first.
[dependencies]
platypus-core = { path = "../platypus-core", version = "0.3.0" }
nix = { version = "0.29", features = ["term"] }
